--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-AULA 01 07 03:00
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="pt-br">
 	<head>
@@ -18,7 +12,7 @@ AULA 01 07 03:00
 
 		<header>
 			<div class="container">
-				<h1>Aparecida Nutrição</h1>
+				<h1 class="titulo">Aparecida Nutrição</h1>
 			</div>
 		</header>
 		<main>
@@ -35,7 +29,7 @@ AULA 01 07 03:00
 						</tr>
 					</thead>
 					<tbody id="tabela-pacientes">
-						<tr class="paciente" >
+						<tr class="paciente" id="primeiro-paciente">
 							<td class="info-nome">Paulo</td>
 							<td class="info-peso">100</td>
 							<td class="info-altura">2.00</td>
@@ -78,6 +72,7 @@ AULA 01 07 03:00
 
 			</section>
 		</main>
+		<script src = "js/principal.js"></script>
 
 	</body>
 </html>
